Bug 427244 - "Still looking" never stops after a search
Summary: "Still looking" never stops after a search
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-02 12:44 UTC by Patrick Silva
Modified: 2021-11-16 16:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-10-02 12:44:20 UTC
SUMMARY
Reproducible on both Arch (Plasma 5.20 beta) and neon unstable.

STEPS TO REPRODUCE
1. open Discover and search for any app
2. 
3. 

OBSERVED RESULT
Dscover shows the search results but "Still looking" never stops

EXPECTED RESULT
"Still looking" should immediately stop after Discover shows all the search results

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0
Comment 1 Nate Graham 2020-10-05 20:35:19 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2020-10-06 01:46:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/40
Comment 3 Aleix Pol 2020-10-08 13:14:42 UTC
Git commit 664ecc45ceed2cbf5d2bf3359409092733a45889 by Aleix Pol.
Committed on 06/10/2020 at 17:43.
Pushed by apol into branch 'master'.

snap: run snap jobs synchronously on a separate thread

Rather than using runAsync, which seems to get confused when executing
in parallel.
We limit to 1 thread to make sure we don't run into the same problem.

M  +1    -1    libdiscover/backends/SnapBackend/CMakeLists.txt
M  +31   -26   libdiscover/backends/SnapBackend/SnapBackend.cpp
M  +5    -0    libdiscover/backends/SnapBackend/SnapBackend.h

https://invent.kde.org/plasma/discover/commit/664ecc45ceed2cbf5d2bf3359409092733a45889
Comment 4 Nate Graham 2021-04-07 20:31:26 UTC
That fixed it. :)
Comment 5 Aleix Pol 2021-04-12 15:02:45 UTC
In fairness, what actually ended up fixing it was 9dc488c2ef5e3006830f313c2e6e6b701fcb01bc ;)
Comment 6 Patrick Silva 2021-11-15 13:34:45 UTC
It's happening again on neon unstable.

1. open Discover and search for 'spacepurge' (only a snap version is available) or 'nexuiz'

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 7 Aleix Pol 2021-11-15 15:34:22 UTC
Can reproduce, only with --backends snap,kns
Comment 8 Bug Janitor Service 2021-11-15 16:07:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/205
Comment 9 Nate Graham 2021-11-16 16:50:58 UTC
Git commit f34cdad8473cb326ebf631be220ae7ac1c8afc19 by Nate Graham, on behalf of Aleix Pol.
Committed on 16/11/2021 at 16:49.
Pushed by ngraham into branch 'master'.

kns: Properly finish searches when there's not many results

M  +1    -1    libdiscover/backends/KNSBackend/KNSBackend.cpp

https://invent.kde.org/plasma/discover/commit/f34cdad8473cb326ebf631be220ae7ac1c8afc19