kns: Properly finish searches when there's not many results

BUG: 427244